--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,11 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "tauri:build": "tauri build"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "tauri": "tauri",
+  "tauri:build": "tauri build"
+}
   "dependencies": {
     "@tauri-apps/api": "^2.0.0",
     "clsx": "^2.1.1",
@@ -28,3 +29,4 @@
     "vite": "^5.4.10"
   }
 }
+
