--- a/.github/workflows/build-windows-portable.yml
+++ b/.github/workflows/build-windows-portable.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       # ---------- Build backend.exe ----------
-      - name: Setup Python
+      - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -34,9 +34,9 @@ jobs:
         working-directory: backend
         run: |
           pyinstaller --onefile --name backend main.py
-          dir dist
+          if (!(Test-Path "dist\backend.exe")) { throw "backend.exe not found after build" }
 
-      # ---------- Build Tauri app ----------
+      # ---------- Build UI (Tauri) ----------
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
@@ -46,11 +46,10 @@ jobs:
         working-directory: app
         run: npm install
 
+      # ВАЖНО: собираем Tauri напрямую, без tauri-action (чтобы не было tauri init --ci)
       - name: Build Tauri (Windows)
-        uses: tauri-apps/tauri-action@v0
-        with:
-          projectPath: app
-          args: --verbose
+        working-directory: app
+        run: npm run tauri:build
 
       # ---------- Package portable release ----------
       - name: Create release folder
@@ -63,8 +62,12 @@ jobs:
 
       - name: Copy UI exe
         run: |
-          $exe = Get-ChildItem -Path app\src-tauri\target\release -Filter *.exe | Select-Object -First 1
-          if (-not $exe) { throw "UI exe not found in app/src-tauri/target/release" }
+          $exe = Get-ChildItem -Path app\src-tauri\target\release -Filter *.exe | Where-Object { $_.Name -notmatch "vshost" } | Select-Object -First 1
+          if (-not $exe) {
+            Write-Host "---- Debug listing of app/src-tauri/target/release ----"
+            Get-ChildItem -Recurse -Path app\src-tauri\target\release | Out-Host
+            throw "UI exe not found in app/src-tauri/target/release"
+          }
           Copy-Item $exe.FullName release\GlassesTryOnStudio.exe
 
       - name: Copy Start/Stop scripts
