--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -9,10 +9,14 @@ edition = "2021"
 tauri-build = { version = "2.5.3", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.3", features = [] }
+tauri = { version = "2.5", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 [features]
 default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol"]
+
+# ВАЖНО: метаданные Tauri (нужны tauri-build)
+[package.metadata.tauri]
+# можно оставить пустым, главное чтобы секция существовала
