--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -17,6 +17,5 @@ serde_json = "1"
 default = ["custom-protocol"]
 custom-protocol = ["tauri/custom-protocol"]
 
-# ВАЖНО: метаданные Tauri (нужны tauri-build)
-[package.metadata.tauri]
-# можно оставить пустым, главное чтобы секция существовала
+[package.metadata.tauri-winres]
+# секция должна существовать, можно пустую
